Bin directory created during compilation if not already there.

--- a/C/1.Preamble/makefile
+++ b/C/1.Preamble/makefile
@@ -5,7 +5,11 @@ BIN_DIR=bin
 
 default: all
 
-all: $(BIN_DIR)/preamble
+all: create_directory \
+	 $(BIN_DIR)/preamble
+
+create_directory:
+	@mdkir -p $(BIN_DIR)
 
 $(BIN_DIR)/preamble: $(SRC_DIR)/preamble.c
 	$(CC) -o $@ $< $(CFLAGS)
