Typo fix in the command issued in the makefile.

--- a/C/1.Preamble/makefile
+++ b/C/1.Preamble/makefile
@@ -9,7 +9,7 @@ all: create_directory \
 	 $(BIN_DIR)/preamble
 
 create_directory:
-	@mdkir -p $(BIN_DIR)
+	@mkdir -p $(BIN_DIR)
 
 $(BIN_DIR)/preamble: $(SRC_DIR)/preamble.c
 	$(CC) -o $@ $< $(CFLAGS)
