FORTRAN examples added.

--- a/F/4.WhoseTurn/makefile
+++ b/F/4.WhoseTurn/makefile
@@ -6,10 +6,10 @@ BIN_DIR=bin
 default: all
 
 all: create_directory \
-	 $(BIN_DIR)/preamble
+	 $(BIN_DIR)/whoseturn
 
 create_directory:
 	@mkdir -p $(BIN_DIR)
 
-$(BIN_DIR)/preamble: $(SRC_DIR)/preamble.f08
+$(BIN_DIR)/whoseturn: $(SRC_DIR)/whoseturn.f08
 	$(CC) -o $@ $< $(CFLAGS)
