--- a/F/2.HelloWorld/makefile
+++ b/F/2.HelloWorld/makefile
@@ -6,10 +6,10 @@ BIN_DIR=bin
 default: all
 
 all: create_directory \
-	 $(BIN_DIR)/preamble
+	 $(BIN_DIR)/helloworld
 
 create_directory:
 	@mkdir -p $(BIN_DIR)
 
-$(BIN_DIR)/preamble: $(SRC_DIR)/preamble.f08
+$(BIN_DIR)/helloworld: $(SRC_DIR)/helloworld.f08
 	$(CC) -o $@ $< $(CFLAGS)
