--- a/F/5.Synchronisation/makefile
+++ b/F/5.Synchronisation/makefile
@@ -6,10 +6,10 @@ BIN_DIR=bin
 default: all
 
 all: create_directory \
-	 $(BIN_DIR)/preamble
+	 $(BIN_DIR)/synchronisation
 
 create_directory:
 	@mkdir -p $(BIN_DIR)
 
-$(BIN_DIR)/preamble: $(SRC_DIR)/preamble.f08
+$(BIN_DIR)/synchronisation: $(SRC_DIR)/synchronisation.f08
 	$(CC) -o $@ $< $(CFLAGS)
