--- a/F/6.Loops/makefile
+++ b/F/6.Loops/makefile
@@ -6,10 +6,10 @@ BIN_DIR=bin
 default: all
 
 all: create_directory \
-	 $(BIN_DIR)/preamble
+	 $(BIN_DIR)/loops
 
 create_directory:
 	@mkdir -p $(BIN_DIR)
 
-$(BIN_DIR)/preamble: $(SRC_DIR)/preamble.f08
+$(BIN_DIR)/loops: $(SRC_DIR)/loops.f08
 	$(CC) -o $@ $< $(CFLAGS)
