--- a/F/8.Schedules/makefile
+++ b/F/8.Schedules/makefile
@@ -6,10 +6,10 @@ BIN_DIR=bin
 default: all
 
 all: create_directory \
-	 $(BIN_DIR)/preamble
+	 $(BIN_DIR)/schedules
 
 create_directory:
 	@mkdir -p $(BIN_DIR)
 
-$(BIN_DIR)/preamble: $(SRC_DIR)/preamble.f08
+$(BIN_DIR)/schedules: $(SRC_DIR)/schedules.f08
 	$(CC) -o $@ $< $(CFLAGS)
